added skill model

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,9 @@
 <h1>Homepage</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
-Blog Title
+<h1>Blog Title</h1>
 <%= @post.inspect %>
 
+<h1>Skills</h1>
+<%= @skills.inspect %>
 
